Fix margin-collapse bugfix

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -96,7 +96,7 @@
    *   - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Box_Model/Mastering_margin_collapsing
    *   - https://medium.com/fed-or-dead/margin-collapse-or-why-your-child-element-is-moving-the-parent-b199a0b60497
    */
-  --margin-collapse-bugfix: 0.02px
+  --margin-collapse-bugfix: 0.02px;
 }
 
 ::-moz-selection /* set separately */
